// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popconfirm/> should render a <Popconfirm/> components 1`] = `
<div>
  <div
    class="cuke-popover cuke-popconfirm"
  >
    <div
      class="cuke-tooltip"
    >
      <div
        class="cuke-tooltip-wrapper cuke-tooltip-position-top cuke-tooltip-light cuke-popover-wrapper cuke-popconfirm-wrapper cuke-tooltip-hide cuke-ui-no-animate"
        style="left:0;top:0"
      >
        <div
          class="cuke-popover-title"
        >
          <div
            class="cuke-popconfirm-title"
          >
            <span
              class="cuke-popconfirm-title-icon"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="8"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="16"
                  y2="16"
                />
              </svg>
            </span>
            黄瓜ui
          </div>
          <div
            class="cuke-popconfirm-button-group"
          >
            <button
              class="cuke-button cuke-button-default cuke-button-normal cuke-button-size-small"
              type="button"
            >
              <span>
                取消
              </span>
            </button>
            <button
              class="cuke-button cuke-button-primary cuke-button-size-small"
              type="button"
            >
              <span>
                确定
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="cuke-tooltip-trigger-wrapper"
      >
        <span>
           鼠标放上来 
        </span>
      </span>
    </div>
  </div>
  <div
    class="cuke-popover cuke-popconfirm"
  >
    <div
      class="cuke-tooltip"
    >
      <div
        class="cuke-tooltip-wrapper cuke-tooltip-position-top cuke-tooltip-light cuke-popover-wrapper cuke-popconfirm-wrapper cuke-tooltip-hide cuke-ui-no-animate"
        style="left:0;top:0"
      >
        <div
          class="cuke-popover-title"
        >
          <div
            class="cuke-popconfirm-title"
          >
            <span
              class="cuke-popconfirm-title-icon"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="8"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="16"
                  y2="16"
                />
              </svg>
            </span>
            黄瓜ui
          </div>
          <div
            class="cuke-popconfirm-button-group"
          >
            <button
              class="cuke-button cuke-button-default cuke-button-normal cuke-button-size-small"
              type="button"
            >
              <span>
                取消
              </span>
            </button>
            <button
              class="cuke-button cuke-button-primary cuke-button-size-small"
              type="button"
            >
              <span>
                确定
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="cuke-tooltip-trigger-wrapper"
      >
        <button
          class="cuke-button cuke-button-default cuke-button-normal"
          type="button"
        >
          <span>
            上
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    class="cuke-popover cuke-popconfirm"
  >
    <div
      class="cuke-tooltip"
    >
      <div
        class="cuke-tooltip-wrapper cuke-tooltip-position-bottom cuke-tooltip-light cuke-popover-wrapper cuke-popconfirm-wrapper cuke-tooltip-hide cuke-ui-no-animate"
        style="left:0;top:0"
      >
        <div
          class="cuke-popover-title"
        >
          <div
            class="cuke-popconfirm-title"
          >
            <span
              class="cuke-popconfirm-title-icon"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="8"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="16"
                  y2="16"
                />
              </svg>
            </span>
            黄瓜ui
          </div>
          <div
            class="cuke-popconfirm-button-group"
          >
            <button
              class="cuke-button cuke-button-default cuke-button-normal cuke-button-size-small"
              type="button"
            >
              <span>
                取消
              </span>
            </button>
            <button
              class="cuke-button cuke-button-primary cuke-button-size-small"
              type="button"
            >
              <span>
                确定
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="cuke-tooltip-trigger-wrapper"
      >
        <button
          class="cuke-button cuke-button-default cuke-button-normal"
          type="button"
        >
          <span>
            下
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    class="cuke-popover cuke-popconfirm"
  >
    <div
      class="cuke-tooltip"
    >
      <div
        class="cuke-tooltip-wrapper cuke-tooltip-position-left cuke-tooltip-light cuke-popover-wrapper cuke-popconfirm-wrapper cuke-tooltip-hide cuke-ui-no-animate"
        style="left:0;top:0"
      >
        <div
          class="cuke-popover-title"
        >
          <div
            class="cuke-popconfirm-title"
          >
            <span
              class="cuke-popconfirm-title-icon"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="8"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="16"
                  y2="16"
                />
              </svg>
            </span>
            黄瓜ui
          </div>
          <div
            class="cuke-popconfirm-button-group"
          >
            <button
              class="cuke-button cuke-button-default cuke-button-normal cuke-button-size-small"
              type="button"
            >
              <span>
                取消
              </span>
            </button>
            <button
              class="cuke-button cuke-button-primary cuke-button-size-small"
              type="button"
            >
              <span>
                确定
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="cuke-tooltip-trigger-wrapper"
      >
        <button
          class="cuke-button cuke-button-default cuke-button-normal"
          type="button"
        >
          <span>
            左
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    class="cuke-popover cuke-popconfirm"
  >
    <div
      class="cuke-tooltip"
    >
      <div
        class="cuke-tooltip-wrapper cuke-tooltip-position-right cuke-tooltip-light cuke-popover-wrapper cuke-popconfirm-wrapper cuke-tooltip-hide cuke-ui-no-animate"
        style="left:0;top:0"
      >
        <div
          class="cuke-popover-title"
        >
          <div
            class="cuke-popconfirm-title"
          >
            <span
              class="cuke-popconfirm-title-icon"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="8"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="16"
                  y2="16"
                />
              </svg>
            </span>
            黄瓜ui
          </div>
          <div
            class="cuke-popconfirm-button-group"
          >
            <button
              class="cuke-button cuke-button-default cuke-button-normal cuke-button-size-small"
              type="button"
            >
              <span>
                取消
              </span>
            </button>
            <button
              class="cuke-button cuke-button-primary cuke-button-size-small"
              type="button"
            >
              <span>
                确定
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="cuke-tooltip-trigger-wrapper"
      >
        <button
          class="cuke-button cuke-button-default cuke-button-normal"
          type="button"
        >
          <span>
            右
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`<Popconfirm/> should render custom icon 1`] = `
<Popover
  className="cuke-popconfirm"
  disabled={false}
  hiddenArrow={false}
  onVisibleChange={[Function]}
  position="top"
  prefixCls="cuke-popover"
  theme="light"
  title={
    <React.Fragment>
      <div
        className="cuke-popconfirm-title"
      >
        <span
          className="cuke-popconfirm-title-icon"
        >
          <ErrorIcon />
        </span>
        黄瓜ui
      </div>
      <div
        className="cuke-popconfirm-button-group"
      >
        <Button
          block={false}
          circle={false}
          dashed={false}
          disabled={false}
          hollow={false}
          href=""
          htmlType="button"
          loading={false}
          onClick={[Function]}
          plain={false}
          prefixCls="cuke-button"
          size="small"
          type="default"
        >
          取消
        </Button>
        <Button
          block={false}
          circle={false}
          dashed={false}
          disabled={false}
          hollow={false}
          href=""
          htmlType="button"
          loading={false}
          onClick={[Function]}
          plain={false}
          prefixCls="cuke-button"
          size="small"
          type="primary"
        >
          确定
        </Button>
      </div>
    </React.Fragment>
  }
  trigger="click"
  visible={null}
  wrapperClassName="cuke-popconfirm-wrapper"
>
  <Button
    block={false}
    circle={false}
    dashed={false}
    disabled={false}
    hollow={false}
    href=""
    htmlType="button"
    loading={false}
    plain={false}
    prefixCls="cuke-button"
    size="default"
    type="default"
  >
    上
  </Button>
</Popover>
`;

exports[`<Popconfirm/> should render custom position 1`] = `
<div>
  <Popconfirm
    cancelButtonProps={Object {}}
    cancelText="取消"
    disabled={false}
    hiddenArrow={false}
    icon={<WarningIcon />}
    okButtonProps={Object {}}
    okText="确定"
    onCancel={[Function]}
    onOk={[Function]}
    onVisibleChange={[Function]}
    position="top"
    prefixCls="cuke-popconfirm"
    theme="light"
    title="黄瓜ui"
    trigger="click"
  >
    <Button
      block={false}
      circle={false}
      dashed={false}
      disabled={false}
      hollow={false}
      href=""
      htmlType="button"
      loading={false}
      plain={false}
      prefixCls="cuke-button"
      size="default"
      type="default"
    >
      上
    </Button>
  </Popconfirm>
  <Popconfirm
    cancelButtonProps={Object {}}
    cancelText="取消"
    disabled={false}
    hiddenArrow={false}
    icon={<WarningIcon />}
    okButtonProps={Object {}}
    okText="确定"
    onCancel={[Function]}
    onOk={[Function]}
    onVisibleChange={[Function]}
    position="bottom"
    prefixCls="cuke-popconfirm"
    theme="light"
    title="黄瓜ui"
    trigger="click"
  >
    <Button
      block={false}
      circle={false}
      dashed={false}
      disabled={false}
      hollow={false}
      href=""
      htmlType="button"
      loading={false}
      plain={false}
      prefixCls="cuke-button"
      size="default"
      type="default"
    >
      下
    </Button>
  </Popconfirm>
  <Popconfirm
    cancelButtonProps={Object {}}
    cancelText="取消"
    disabled={false}
    hiddenArrow={false}
    icon={<WarningIcon />}
    okButtonProps={Object {}}
    okText="确定"
    onCancel={[Function]}
    onOk={[Function]}
    onVisibleChange={[Function]}
    position="left"
    prefixCls="cuke-popconfirm"
    theme="light"
    title="黄瓜ui"
    trigger="click"
  >
    <Button
      block={false}
      circle={false}
      dashed={false}
      disabled={false}
      hollow={false}
      href=""
      htmlType="button"
      loading={false}
      plain={false}
      prefixCls="cuke-button"
      size="default"
      type="default"
    >
      左
    </Button>
  </Popconfirm>
  <Popconfirm
    cancelButtonProps={Object {}}
    cancelText="取消"
    disabled={false}
    hiddenArrow={false}
    icon={<WarningIcon />}
    okButtonProps={Object {}}
    okText="确定"
    onCancel={[Function]}
    onOk={[Function]}
    onVisibleChange={[Function]}
    position="right"
    prefixCls="cuke-popconfirm"
    theme="light"
    title="黄瓜ui"
    trigger="click"
  >
    <Button
      block={false}
      circle={false}
      dashed={false}
      disabled={false}
      hollow={false}
      href=""
      htmlType="button"
      loading={false}
      plain={false}
      prefixCls="cuke-button"
      size="default"
      type="default"
    >
      右
    </Button>
  </Popconfirm>
</div>
`;
